--- a/interface_slr.ui
+++ b/interface_slr.ui
@@ -1,20 +1,3 @@
-<!--
-Copyright (C) 2018 Gabriel Felipe Huwe.
-This file is part of Byron.
-
-Byron is free software: you can redistribute it and/or modify
-it under the terms of the GNU General Public License as published by
-the Free Software Foundation, version 3.
-
-Byron is distributed in the hope that it will be useful,
-but WITHOUT ANY WARRANTY; without even the implied warranty of
-MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-GNU General Public License for more details.
-
-You should have received a copy of the GNU General Public License
-along with Byron.  If not, see <https://www.gnu.org/licenses/>.
--->
-
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>MainWindow</class>
@@ -29,6 +12,10 @@ along with Byron.  If not, see <https://www.gnu.org/licenses/>.
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
+  </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>byron.ico</normaloff>byron.ico</iconset>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
